# migrate-packit--perms-from-orderly-web

./: .gitignore  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
scripts/: clear_docker.sh  dev.sh  montagu_cli.sh  run-dependencies.sh  science.sh  uat.sh
scripts/packit-db/: add-permission-to-role  add-user-to-role  create-role
src/migrate_packit_perms_from_orderly_web/: __main__.py  map_permissions.py  migrate.py  orderly_web_permissions.py  packit_permissions.py  permissions_csv_file.py  user_roles_csv_file.py
src/migrate_packit_perms_from_orderly_web/cli/: __init__.py
src/migrate_packit_perms_from_orderly_web/run_dev/: login_ow_users.py
tests/: test_integration.py  test_map_permissions.py
